# sf-pulse-python-workshop

./: .dockerignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yaml  demo_prompt.md  pyproject.toml  render.yaml
app/: main.py  refresh.py  security.py  storage.py
app/llm/: __init__.py  pipeline.py  schemas.py
app/routes/: api_events.py  api_health.py  api_push.py  api_restaurants.py  api_rss.py  api_sse.py  api_updates.py  pages.py  utils.py
app/shared/: catalog.py  filters.py  identity.py  types.py
app/sources/: cal_academy.py  ddg_search.py  famsf.py  funcheap.py
app/templates/: base.html  event_detail.html  index.html  map.html  restaurant_detail.html
docs/: architecture.md  deployment.md  workflow-setup.md
static/: home.js  manifest.webmanifest  map.js  service-worker.js
static/styles/: detail.css  global.css  home.css  map.css
tests/: test_api_events.py  test_api_push.py  test_refresh.py  test_security.py  test_shared_catalog.py  test_shared_filters.py  test_shared_identity.py  test_storage.py
workflow/: _app.py  main.py
workflow/tasks/: apply_discovered_items.py  daily_refresh.py  fetch_cal_academy.py  fetch_eater_sf.py  fetch_famsf.py  fetch_funcheap.py  fetch_michelin.py  fetch_sfist.py  search_events.py  search_restaurants.py
