[project]
name = "sf-pulse-python"
version = "0.1.0"
description = "SF restaurant openings tracker (Python port of sf-pulse)"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "asyncpg>=0.30",
    "redis>=5.2",
    "sse-starlette>=2.1",
    "httpx>=0.28",
    "selectolax>=0.3.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pywebpush>=2.0",
    "cryptography>=44",
    "ecdsa>=0.19",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "openai>=1.60",
    "anthropic>=0.42",
    "render-sdk>=0.1.0",
    "feedparser>=6.0",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.9",
    "respx>=0.22",
    "ruff>=0.9",
    "pyright>=1.1.391",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "PIE", "RET", "SIM"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
include = ["app", "workflow", "bin", "tests"]

[tool.uv]
package = false
